Fixed some overlapping bugs with the testimonials. Removed some CSS from the JS.

--- a/css/misc.styl
+++ b/css/misc.styl
@@ -45,6 +45,7 @@
   background transparent url("../img/pattern-slant-lt.png") repeat left top
 
 .testimonials
+.testimonials-list
   position relative
 
 .testimonial
@@ -56,19 +57,25 @@
 
   transition opacity 250ms linear
 
-.testimonial:first-child
-  display block
-  opacity 1
-
 .testimonials-go .testimonial
   left 0
+  height 100%
   position absolute
   top 0
   width 100%
+  z-index 10
+
+.testimonial-current
+.testimonials-go .testimonial-current
+  display block
+  opacity 1
+  z-index 11
 
 .testimonial-spacer
+.testimonials-go .testimonial-spacer
   position relative
   visibility hidden
+  z-index 1
 
 .testimonial:before
   open-quote()
